Added Games Section Spotify Button and Link to Portfolio

--- a/index.html
+++ b/index.html
@@ -14,38 +14,52 @@
       <p class="randomBody">
         Here is a random website I made for fun to try things out.
       </p>
-      <p class="randomBody">
-        Pretty cool stuff on it like animations and buttons.
-      </p>
+      <p class="randomBody">Yeah pretty cool.</p>
       <p class="randomBody">Some buttons do things some are pointless.</p>
       <p class="randomBody">
         <!-- Check the about me button for another cool page. -->
       </p>
     </div>
-    <br />
-    <br />
-    <button
-      onclick="printMessage()"
-      href="#"
-      class="lightMode"
-      style="--clr: #d247ff"
-    >
+    <br/>
+    <br/>
+    <a onclick="printMessage()" class="buttonMode"style="--clr: #d247ff">
       <span> Button </span>
-    </button>
-    <br />
-    <br />
-      <!-- <div class="wrapper">
-        <div class="image">
-        <a href="https://steamcommunity.com/profiles/76561198079348284/">
-          <img src="stylesheets/Steam_icon_logo.svg.webp" class="steamIcon" />
-          <div class="content">
-            <p>Check Out Profile</p>
-          </div>
-        </a>
-        </div>
-      </div> -->
-      <a href="https://steamcommunity.com/profiles/76561198079348284/" target="_blank">
-        <img src="stylesheets/Steam_icon_logo.svg.webp" class="steamIcon" />
     </a>
+    <br/>
+    <br/>
+    <br>
+
+    <a class="steamIcon"href="https://steamcommunity.com/profiles/76561198079348284/"target="_blank">
+      <img src="stylesheets/Steam_icon_logo.svg.webp" />
+    </a>
+    <a class="steamIcon"href="https://open.spotify.com/user/12120626272?si=9f73b72abd3a478b"target="_blank">
+      <img src="stylesheets/spotfiy.png"/>
+    </a>
+    <br>
+    <br>
+    <a class="ignItem" href="https://jayden4128.github.io/ReactPortfolio/"> Here is a link to my portfolio that is under construction.</a>
+    <br>
+    <br>
+  <br>
+  <div class="ignList">
+    <div class="ignItem">
+      <h3> Riot Account: </h3>
+      <p> JDen#4128</p>
+      <h3> Steam Account Name: </h3>
+      <p> Captain Quackers</p>
+      <h3> Ubisoft: </h3>
+      <p> VeryFunkyMunky</p>
+    </div>
+  </div>
+  <div class="ignList">
+    <div class="ignItem">
+      <h3>Favorite Games</h3>
+      <p> Dead By Daylight</p>
+      <p> League of Legends</p>
+      <p> Escape From Tarkov</p>
+      <p> Resident Evil (4&7)</p>
+      <p> Valorant</p>
+    </div>
+  </div>
   </body>
 </html>
