--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@
     <br>
 
     <a class="steamIcon"href="https://steamcommunity.com/profiles/76561198079348284/"target="_blank">
-      <img src="stylesheets/Steam_icon_logo.svg.webp" />
+      <img src="stylesheets/steam.png" />
     </a>
     <a class="steamIcon"href="https://open.spotify.com/user/12120626272?si=9f73b72abd3a478b"target="_blank">
-      <img src="stylesheets/spotfiy.png"/>
+      <img src="stylesheets/spotify.png"/>
     </a>
     <br>
     <br>
     <a class="ignItem" href="https://jayden4128.github.io/ReactPortfolio/"> Here is a link to my portfolio that is under construction.</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a class="ignItem" href="https://anilist.co/user/CaptainQuackers/animelist"> Here is a link to a list of anime I have watched.</a>
     <br>
     <br>
   <br>
@@ -53,13 +58,13 @@
   </div>
   <div class="ignList">
     <div class="ignItem">
-      <h3>Favorite Games</h3>
-      <p> Dead By Daylight</p>
-      <p> League of Legends</p>
-      <p> Escape From Tarkov</p>
-      <p> Resident Evil (4&7)</p>
-      <p> Valorant</p>
+      <h3>Favorite Games </h3>
+      <p> Dead By Daylight </p>
+      <p> League of Legends </p>
+      <p> Escape From Tarkov </p>
+      <p> Resident Evil (4&7) </p>
     </div>
   </div>
+
   </body>
 </html>
