--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <title>My Website</title>
     <script src="scripts/main.js" charset="utf-8"></script>
-    <script src="scripts/style.css" charset="utf-8"></script>
   </head>
   <body class="bodyStyle">
     <h1 class="titleHeader">Welcome to my site!</h1>
