Fixed Cursor And Boxes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body class="bodyStyle">
     <h1 class="titleHeader">Welcome to my site!</h1>
     <div class="container">
-      <p class="randomBody">
+      <p class="randomBodyDone">
         Here is a random website I made for fun to try things out.
       </p>
-      <p class="randomBody">Yeah pretty cool.</p>
+      <p class="randomBodyDone">Yeah pretty cool.</p>
       <p class="randomBody">Some buttons do things some are pointless.</p>
       <p class="randomBody">
         <!-- Check the about me button for another cool page. -->
