Fixed Links Opening In New Tabs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <title>My Website</title>
+    <title>Under Construction</title>
     <script src="scripts/main.js" charset="utf-8"></script>
   </head>
   <body class="bodyStyle">
@@ -36,12 +36,12 @@
     </a>
     <br>
     <br>
-    <a class="ignItem" href="https://jayden4128.github.io/ReactPortfolio/"> Here is a link to my portfolio that is under construction.</a>
+    <a class="ignItem" href="https://jayden4128.github.io/ReactPortfolio/" target="_blank"> Here is a link to my portfolio that is under construction.</a>
     <br>
     <br>
     <br>
     <br>
-    <a class="ignItem" href="https://anilist.co/user/CaptainQuackers/animelist"> Here is a link to a list of anime I have watched.</a>
+    <a class="ignItem" href="https://anilist.co/user/CaptainQuackers/animelist" target = "_blank"> Here is a link to a list of anime I have watched.</a>
     <br>
     <br>
   <br>
