Changed Font and Colors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="scripts/main.js" charset="utf-8"></script>
   </head>
   <body class="bodyStyle">
+    <div class="newContainer">
+      <div class="bubbles">
+        <span></span>
+        <span></span>
+        <span></span>
     <h1 class="titleHeader">Welcome to my site!</h1>
     <div class="container">
       <p class="randomBodyDone">
@@ -21,7 +26,7 @@
     </div>
     <br/>
     <br/>
-    <a onclick="printMessage()" class="buttonMode"style="--clr: #d247ff">
+    <a onclick="printMessage()" class="buttonMode"style="--clr: #000000; --colr: #00ffff">
       <span> Button </span>
     </a>
     <br/>
@@ -34,6 +39,7 @@
     <a class="steamIcon"href="https://open.spotify.com/user/12120626272?si=9f73b72abd3a478b"target="_blank">
       <img src="stylesheets/spotify.png"/>
     </a>
+    <br>
     <br>
     <br>
     <a class="ignItem" href="https://jayden4128.github.io/ReactPortfolio/" target="_blank"> Here is a link to my portfolio that is under construction.</a>
@@ -61,9 +67,10 @@
       <p> Dead By Daylight </p>
       <p> League of Legends </p>
       <p> Escape From Tarkov </p>
-      <p> Resident Evil (4&7) </p>
+      <p> Resident Evil (4 & 7) </p>
     </div>
   </div>
-
+</div>
+</div>
   </body>
 </html>
