Icon added for anime instead of text

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </a>
     <a class="steamIcon"href="https://open.spotify.com/user/12120626272?si=9f73b72abd3a478b"target="_blank">
       <img src="stylesheets/spotify.png"/>
+      <a class="steamIcon"href="https://anilist.co/user/CaptainQuackers/animelist"target="_blank">
+        <img src="stylesheets/anilist.png" />
+      </a>
     </a>
     <br>
     <br>
@@ -41,11 +44,6 @@
     <br>
     <br>
     <br>
-    <br>
-    <a class="ignItem" href="https://anilist.co/user/CaptainQuackers/animelist" target = "_blank"> Here is a link to a list of anime I have watched.</a>
-    <br>
-    <br>
-  <br>
   <div class="ignList">
     <div class="ignItem">
       <h3> Riot Account: </h3>
