--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h3>Favorite Games </h3>
       <p> Dead By Daylight </p>
       <p> League of Legends </p>
-      <p> Escape From Tarkov </p>
+      <p> Kingdom Hearts </p>
       <p> Resident Evil (4 & 7) </p>
     </div>
   </div>
