--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesheets/style.css" />
     <title>Under Construction</title>
-    <script src="scripts/main.js" charset="utf-8"></script>
   </head>
   <body class="bodyStyle">
     <h1 class="titleHeader">Welcome to my site!</h1>
@@ -29,12 +28,12 @@
     <br>
 
     <a class="steamIcon"href="https://steamcommunity.com/profiles/76561198079348284/"target="_blank">
-      <img src="stylesheets/steam.png" />
+      <img class="clickables" src="stylesheets/steam.png" />
     </a>
     <a class="steamIcon"href="https://open.spotify.com/user/12120626272?si=9f73b72abd3a478b"target="_blank">
-      <img src="stylesheets/spotify.png"/>
+      <img class="clickables" src="stylesheets/spotify.png"/>
       <a class="steamIcon"href="https://anilist.co/user/CaptainQuackers/animelist"target="_blank">
-        <img src="stylesheets/anilist.png" />
+        <img class="clickables" src="stylesheets/anilist.png" />
       </a>
     </a>
     <br>
@@ -63,5 +62,30 @@
       <p> Resident Evil (4 & 7) </p>
     </div>
   </div>
+  <div class="slider">
+    <div class="item">
+      <h1 style="font-size: 24px;">Graduation</h1>
+      <p>Kanye West</p>
+      <img class="disc" src="assets/grad.png" alt="Grad Disc" />
+    </div>
+    <div class="item">
+      <h1 style="font-size: 24px;">Astroworld</h1>
+      <p>Travis Scott</p>
+      <img class="disc" src="assets/astro.png" alt="Grad Disc" />
+    </div>
+    <div class="item">
+      <h1 style="font-size: 22px;">Life of a Dark Rose</h1>
+      <p> Lil Skies</p>
+      <img class="disc" src="assets/darkRose.png" alt="Grad Disc" />
+    </div>
+    <div class="item">
+      <h1 style="font-size: 24px;">Long. Live. ASAP</h1>
+      <p> A$AP Rocky</p>
+      <img class="disc" src="assets/asap.png" alt="Grad Disc" />
+    </div>
+    <button id="next">></button>
+    <button id="prev"><</button>
+  </div>
+  <script src="scripts/main.js"></script>
   </body>
 </html>
