Changed buttons for flipping

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <p> Resident Evil (4 & 7) </p>
     </div>
   </div>
+  <h1 class="albumSection"> Some Albums I Like</h1>
   <div class="slider">
     <div class="item">
       <h1 style="font-size: 24px;">Graduation</h1>
@@ -83,8 +84,8 @@
       <p> A$AP Rocky</p>
       <img class="disc" src="assets/asap.png" alt="Grad Disc" />
     </div>
-    <button id="next">></button>
-    <button id="prev"><</button>
+    <button class="albumButton" id="next">></button>
+    <button class="albumButton" id="prev"><</button>
   </div>
   <script src="scripts/main.js"></script>
   </body>
